# python-project-83

./: .env  .gitignore  Dockerfile  Makefile  README.md  build.sh  database.sql  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: lint.yml
page_analyzer/: app.py  db.py  parser.py  url_normalizer.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
templates/: index.html  url.html  urls.html
