[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "Flask>=2.0",
  "python-dotenv>=0.21",
  "gunicorn>=20.0",
  "psycopg2-binary>=2.9"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
dependencies = ["."]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]